syntax = "proto3";

option csharp_namespace = "AllHands.AuthService.Contracts.Protos.Grpc";

package shared;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";

service UserService
{
  rpc Create(CreateUserRequest) returns (CreateUserResponse);
  rpc Update(UpdateUserRequest) returns (UpdateUserResponse);
  rpc Delete(DeleteUserRequest) returns (DeleteUserResponse);
}

message CreateUserRequest {
  string email = 1;
  string first_name = 2;
  google.protobuf.StringValue middle_name = 3;
  string last_name = 4;
  google.protobuf.StringValue phone_number = 5;
  string employee_id = 6;
}

message CreateUserResponse {
  string user_id = 1;
  string role_id = 2;
  string global_user_id = 3;
}

message UpdateUserRequest {
  string user_id = 1;
  string email = 2;
  string first_name = 3;
  google.protobuf.StringValue middle_name = 4;
  string last_name = 5;
  google.protobuf.StringValue phone_number = 6;
  google.protobuf.StringValue role_id = 7;
}

message UpdateUserResponse {
  string user_id = 1;
  string role_id = 2;
  string global_user_id = 3;
}

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
}
